<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>fr.ght1pc9kc</groupId>
    <artifactId>baywatch</artifactId>
    <version>2.1.0-SNAPSHOT</version>
    <name>baywatch</name>
    <packaging>pom</packaging>

    <modules>
        <module>sandside</module>
        <module>seaside</module>
        <module>assembly</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <db.driver>org.sqlite.JDBC</db.driver>
        <db.url>jdbc:sqlite:file:${project.build.directory}/jooq_baywatch.db</db.url>
        <db.username>security</db.username>
        <db.password>security</db.password>

        <aalto-xml.version>1.3.2</aalto-xml.version>
        <findbugs.version>3.0.2</findbugs.version>
        <html-sanitizer.version>20220608.1</html-sanitizer.version>
        <jetbrains.version>24.1.0</jetbrains.version>
        <json-unit.version>3.2.2</json-unit.version>
        <juery.version>1.2.4</juery.version>
        <logback-json.version>0.1.5</logback-json.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <lucene.version>9.8.0</lucene.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <nbvcxz.version>1.5.1</nbvcxz.version>
        <nimbus-jose-jwt.version>9.37.1</nimbus-jose-jwt.version>
        <noexception.version>1.9.1</noexception.version>
        <scraphead.version>1.4.1</scraphead.version>
        <testy-box.version>1.6.2</testy-box.version>
        <ulid-creator.version>5.2.2</ulid-creator.version>
        <unbescape.version>1.1.6.RELEASE</unbescape.version>
        <!-- FIXME: Remove when Spring upgrade https://github.com/xerial/sqlite-jdbc/issues/990 -->
        <sqlite-jdbc.version>3.43.2.1</sqlite-jdbc.version>

        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
        <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
        <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <maven-surefire-plugin.version>3.2.1</maven-surefire-plugin.version>
        <pl-git-commit-id-plugin.version>4.9.10</pl-git-commit-id-plugin.version>
        <versions-maven-plugin.version>2.16.1</versions-maven-plugin.version>
        <flyway-maven-plugin.version>10.1.0</flyway-maven-plugin.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${pl-git-commit-id-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-maven-plugin</artifactId>
                    <version>${flyway-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>${versions-maven-plugin.version}</version>
                    <configuration>
                        <processDependencyManagementTransitive>false</processDependencyManagementTransitive>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>sonar</id>
            <properties>
                <sonar.projectKey>Marthym_baywatch</sonar.projectKey>
                <sonar.organization>ght1pc9kc-fr</sonar.organization>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
                <sonar.coverage.jacoco.xmlReportPaths>**/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
                <sonar.coverage.exclusions>**/*.html</sonar.coverage.exclusions>
                <sonar.exclusions>**/*.html</sonar.exclusions>
                <sonar.java.binaries>${project.build.directory}/classes</sonar.java.binaries>
                <sonar.java.libraries>${project.build.directory}/dependency</sonar.java.libraries>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>aggregate</id>
                                <goals>
                                    <goal>report-aggregate</goal>
                                </goals>
                                <phase>verify</phase>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>${maven-dependency-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>copy-dependencies</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <includeArtifactIds>lombok</includeArtifactIds>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
